# Midi-to-WAV-Synthesizer-V3

./: CMakeLists.txt  README.md  interactive_instrument.cpp  interactive_instrument.hpp  main.cpp  qinstrument.cpp  qinstrument.hpp  test_qinstrument.cpp  wav.cpp
tests/: CMakeLists.txt  Test.cmake
